--- a/applications/ecommerce-react/package.json
+++ b/applications/ecommerce-react/package.json
@@ -18,9 +18,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "server": "json-server --watch src/data/data.json --port 8000"
   },
   "eslintConfig": {
     "extends": [
